objects/VPPSR_Vehicle_Description__c.object
<CustomObject>
    <fields>
        <fullName>Collateral_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral Detail</label>
        <referenceTo>VPPSR_Vehicle_Detail__c</referenceTo>
        <relationshipName>Vehicle_Descriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>body_Type__c</fullName>
        <label>body Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>colour__c</fullName>
        <label>colour</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>compliance_Year_Month__c</fullName>
        <label>compliance Year Month</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>engine_Number__c</fullName>
        <label>engine Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>make__c</fullName>
        <label>make</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>manufacture_Year__c</fullName>
        <label>manufacture Year</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>model__c</fullName>
        <label>model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vehicle_Type__c</fullName>
        <label>vehicle Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VPPSR Vehicle Description</label>
    <nameField>
        <displayFormat>VDN-{0000000}</displayFormat>
        <label>Vehicle Description Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VPPSR Vehicle Description</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>